--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "zm-element",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
+  "module": "index.js",
+  "types": "index.d.ts",
   "scripts": {
-    "dev": "pnpm --filter @toy-element/play dev",
-    "docs:dev": "pnpm --filter @toy-element/docs dev",
-    "docs:build": "pnpm --filter @toy-element/docs build",
+    "dev": "pnpm --filter @zm-element/play dev",
     "test": "echo \"todo\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "zm-element": "workspace:*",
     "@zm-element/hooks": "workspace:*",
     "@zm-element/theme": "workspace:*",
     "@zm-element/utils": "workspace:*",
     "lodash-es": "^4.17.21",
-    "vue": "^3.4.19",
-    "zm-element": "workspace:*"
+    "vue": "^3.4.19"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
@@ -35,5 +35,6 @@
     "vite": "^5.1.4",
     "vitest": "^1.4.0",
     "vue-tsc": "^1.8.27"
-  }
+  },
+  "workspaces":["packages/*"]
 }
