--- a/packages/play/package.json
+++ b/packages/play/package.json
@@ -8,7 +8,9 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
-
+  "dependencies": {
+    "vue": "^3.4.21"
+  },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4"
   }
