--- a/packages/play/tsconfig.json
+++ b/packages/play/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/stories/Button.stories.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
