--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["packages/**/*.ts", "packages/**/*.tsx", "packages/**/*.vue", "packages/components/button/Button.test.tsx"]
+  "include": ["packages/**/*.ts", "packages/**/*.tsx", "packages/**/*.vue", "packages/components/button/Button.test.tsx", "packages/play/src/stories/Button.stories.ts"]
 }
