--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@zm-element/utils": "workspace:*",
     "lodash-es": "^4.17.21",
     "vue": "^3.4.19",
-    "zm-element": "workspace:*"
+    "zm-element": "workspace:*",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
