--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@zm-element/components": "workspace:*"
+  },
+  "devDependencies": {
+    "vite-plugin-dts": "^3.9.1"
   }
 }
