--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "docs:build": "pnpm --filter @zm-element/docs build",
     "docs:preview": "pnpm --filter @zm-element/docs dev",
     "test": "pnpm --filter @zm-element/components test",
-    "sb": "pnpm --filter @zm-element/play storybook"
+    "sb": "pnpm --filter @zm-element/play storybook",
+    "build": "pnpm --filter zm-element build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@storybook/addon-actions": "^8.1.9",
     "@zm-element/hooks": "workspace:*",
     "@zm-element/theme": "workspace:*",
     "@zm-element/utils": "workspace:*",
     "lodash-es": "^4.17.21",
     "vue": "^3.4.19",
-    "zm-element": "workspace:*",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/vue-fontawesome": "^3.0.8"
+    "zm-element": "workspace:*"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
@@ -34,6 +35,8 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
+    "move-file-cli": "^3.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss-color-mix": "^1.1.0",
     "postcss-each": "^1.1.0",
     "postcss-each-variables": "^0.3.0",
