--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,9 +5,13 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
+    
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-umd": "vite build --config vite.umd.config.ts",
-    "build-es": "vite build --config vite.es.config.ts"
+    "build-es": "vite build --config vite.es.config.ts",
+    "move-style": "move-file dist/es/index.css dist/index.css",
+    "build-only": "run-p build-es build-umd",
+    "build": "run-s build-only move-style"
   },
   "keywords": [],
   "author": "",
