--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "module": "index.js",
   "types": "index.d.ts",
+  "type": "module",
   "scripts": {
     "dev": "pnpm --filter @zm-element/play dev",
     "docs:dev": "pnpm --filter @zm-element/docs dev",
@@ -26,10 +27,11 @@
     "@zm-element/theme": "workspace:*",
     "@zm-element/utils": "workspace:*",
     "lodash-es": "^4.17.21",
-    "vue": "^3.4.19",
+    "vue": "^3.4.28",
     "zm-element": "workspace:*"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.20",
     "@vitejs/plugin-vue": "^5.0.4",
