--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -30,5 +30,6 @@
     "packages/components/**/*.ts",
     "packages/components/**/*.vue",
     "packages/components/index.ts"
-  ]
+  ],
+  "exclude": ["packages/components/vitest.config.ts"]
 }
