--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "docs:preview": "pnpm --filter @zm-element/docs dev",
     "test": "pnpm --filter @zm-element/components test",
     "sb": "pnpm --filter @zm-element/play storybook",
-    "build": "pnpm --filter zm-element build"
+    "build": "pnpm --filter zm-element build",
+    "release": "pnpm --filter zm-element release"
   },
   "keywords": [],
   "author": "",
