--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zm-element",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "components library by Vue3 +TS",
   "type": "module",
   "files": [
@@ -24,10 +24,7 @@
       "require": "./dist/"
     }
   },
-
-
   "scripts": {
-    
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-umd": "vite build --config vite.umd.config.ts",
     "build-es": "vite build --config vite.es.config.ts",
@@ -37,7 +34,7 @@
     "release": "release-it",
     "clean": "rimraf dist"
   },
-  "keywords": [],
+  "keywords": ["library", "vue3", "components", "typescript"],
   "author": "",
   "license": "ISC",
   "dependencies": {
