--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "docs:dev": "pnpm --filter @zm-element/docs dev",
     "docs:build": "pnpm --filter @zm-element/docs build",
     "docs:preview": "pnpm --filter @zm-element/docs dev",
-    "test": "pnpm --filter @zm-element/components test",
-    "sb": "run-s build && pnpm --filter @zm-element/play storybook",
-    "build": "pnpm --filter zm-element build",
-    "release": "pnpm --filter zm-element release"
+    "test": "cross-env NODE_ENV=test pnpm --filter @zm-element/components test",
+    "sb": "pnpm --filter @zm-element/play storybook",
+    "build": "cross-env NODE_ENV=production pnpm --filter zm-element build",
+    "build:dev": "cross-env NODE_ENV=development pnpm --filter zm-element build:watch"
   },
   "keywords": [],
   "author": "",
@@ -35,10 +35,11 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.20",
+    "@types/shelljs": "^0.8.15",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
-    "move-file-cli": "^3.0.0",
+    "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-color-mix": "^1.1.0",
     "postcss-each": "^1.1.0",
@@ -46,6 +47,7 @@
     "postcss-for": "^2.1.1",
     "postcss-nested": "^6.0.1",
     "release-it": "^17.4.0",
+    "shelljs": "^0.8.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vitest": "^1.4.0",
