--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -20,7 +20,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./",
+    "types": ["node"],
+    "paths": {
+      "@zm-element/components": ["./packages/components"]
+    }
   },
   "include": [
     "env.d.ts",
@@ -28,8 +33,6 @@
     "packages/hooks/**/*.ts",
     "packages/utils/**/*.ts",
     "packages/components/**/*.ts",
-    "packages/components/**/*.vue",
-    "packages/components/index.ts"
   ],
   "exclude": ["packages/components/vitest.config.ts"]
 }
