--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,12 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["packages/**/*.ts", "packages/**/*.tsx", "packages/**/*.vue", "packages/components/Button/Button.test.tsx", "packages/play/src/stories/Button.stories.ts"]
+  "include": [
+    "packages/**/*.ts",
+   "packages/**/*.tsx", 
+   "packages/**/*.vue", 
+   "packages/components/Button/Button.test.tsx",
+    "packages/play/src/stories/Button.stories.ts",
+    "./env.d.ts"
+  ]
 }
