--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vitepress dev",
@@ -13,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitepress-demo-preview/component": "^2.3.2",
+    "@vitepress-demo-preview/plugin": "^1.2.3",
     "vitepress": "1.0.0-rc.44"
   }
 }
