--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,7 +43,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/vue-fontawesome": "^3.0.8"
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@popperjs/core": "^2.11.8",
+    "async-validator": "^4.2.5"
   },
   "devDependencies": {
     "@zm-element/components": "workspace:*",
