--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,7 @@ dist-ssr
 /cypress/srceenshots/
 
 .vitepress/dist
-.vitepress/cache
-
+packages/docs/.vitepress/cache
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
