--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@zm-element/hooks": "workspace:*",
     "@zm-element/theme": "workspace:*",
     "@zm-element/utils": "workspace:*",
+    "@zm-element/locale": "workspace:*",
     "@zm-element/vite-plugins": "workspace:*",
     "@vitepress-preview/component": "workspace:*",
 
@@ -56,7 +57,8 @@
     "vite": "^5.1.4",
     "vitest": "^1.4.0",
     "vite-plugin-dts": "^3.9.1",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "vue3-i18n": "^1.1.5"
   },
   "workspaces": [
     "packages/*"
